--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@
 .Ruserdata
 CarveWe.Rproj
 Deprecated_Files
-Misc_Files
+Misc_FilesModel_Validation/media_err
+Model_Validation/media_out
+Model_Validation/Runs
