Fixed .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .Ruserdata
 CarveWe.Rproj
 Deprecated_Files
-Misc_FilesModel_Validation/media_err
+Misc_Files
+Model_Validation/media_err
 Model_Validation/media_out
 Model_Validation/Runs
