--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.csv filter=lfs diff=lfs merge=lfs -text
+Publication_Data/*.csv filter=lfs diff=lfs merge=lfs -text
 *.RData filter=lfs diff=lfs merge=lfs -text
