--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-Publication_Data/*.csv filter=lfs diff=lfs merge=lfs -text
-*.RData filter=lfs diff=lfs merge=lfs -text
+Publication_Data/new-growth50-test-data_all-cats.Rdata filter=lfs diff=lfs merge=lfs -text
+Publication_Data/carve_me_rpkm_1425.csv filter=lfs diff=lfs merge=lfs -text
+Publication_Data/20250212_matti_agreement_final.csv filter=lfs diff=lfs merge=lfs -text
