--- a/conda_recipe/meta.yaml
+++ b/conda_recipe/meta.yaml
@@ -1,6 +1,6 @@
-{% set name = "CarveWe" %}
-{% set version = GIT_DESCRIBE_TAG.lstrip('v') if GIT_DESCRIBE_TAG else "0.0.0" %}
-{% set buildstr = "g" + GIT_DESCRIBE_HASH[:7] if GIT_DESCRIBE_HASH else "local" %}
+{% set name = "carvewe" %}
+{% set version = environ.get('CONDA_PKG_VERSION', '0.dev0') %}
+{% set buildstr = environ.get('PKG_BUILD_STRING', 'local') %}
 
 package:
   name: {{ name|lower }}
@@ -8,29 +8,28 @@ package:
 
 source:
   git_url: https://github.com/ryanreyn/CarveWe.git
-  git_rev: {{ GIT_DESCRIBE_TAG if GIT_DESCRIBE_TAG else "HEAD" }}
+  git_rev: {{ environ.get('CARVEWE_GIT_REV', 'dev') }}
 
 build:
   number: 0
-  string: {{ buildstr }}
-  noarch: generic
-  script: bash conda_recipe/build.sh
+  string: {{ environ.get('PKG_BUILD_STRING', 'local') }}
+  skip: True  # [target_platform == "osx-arm64"]
 
 requirements:
   host:
     - bash
     - coreutils
-    - python
-    - pip
   run:
     - bash
     - coreutils
-    - numpy=2.2.3
-    - carveme=1.6.4
+    - numpy==2.2.3
+    - carveme==1.6.4
     - python >=3.10
     - pandas
-    - cobra=0.29.1
+    - cobra==0.29.1
+    - reframed==1.6.0
     - diamond
+    - python-libsbml
 
 test:
   source_files:
