--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,14 +1,14 @@
 # .github/workflows/build-linux.yml
 name: Build Linux
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   linux64:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with: { fetch-depth: 0, tags: true }
+        with: { fetch-depth: 0 }
       - uses: conda-incubator/setup-miniconda@v3
         with:
           miniforge-version: latest
@@ -19,9 +19,26 @@ jobs:
       - name: Install build tools
         shell: bash -l {0}
         run: mamba install -y conda-build boa
+        
       - name: Build
         shell: bash -l {0}
         run: conda mambabuild conda_recipe
+
       - name: Show artifact path
         shell: bash -l {0}
         run: conda build conda_recipe --output
+
+      - name: Resolve package path
+        id: out
+        shell: bash -l {0}
+        run: |
+          echo "pkg=$(conda build conda_recipe --output)" >> $GITHUB_OUTPUT
+          echo "Package path: $(conda build conda_recipe --output)"
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-64-conda-pkg         # <-- this is the artifact name you'll download
+          path: ${{ steps.out.outputs.pkg }}
+          if-no-files-found: error
+          retention-days: 7
