--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -4,11 +4,7 @@ on: [workflow_call, workflow_dispatch]
 
 jobs:
   integ:
-    runs-on: ubuntu-latest
-    env:
-      CARVEWE_GIT_REV: ${{ github.sha }}
-      CONDA_PKG_VERSION: 0.dev${{ github.run_number }}
-      PKG_BUILD_STRING: integ_${{ github.sha.substr(0,7) }}
+    runs-on: ubuntu-latest\
     steps:
       - uses: actions/checkout@v4
         with:
@@ -22,6 +18,12 @@ jobs:
           channel-priority: strict
           use-mamba: true
           activate-environment: build-carvewe
+
+      - name: Export vars
+        run: |
+          echo "CARVEWE_GIT_REV=$GITHUB_SHA" >> $GITHUB_ENV
+          echo "CONDA_PKG_VERSION=0.dev${GITHUB_RUN_NUMBER}" >> $GITHUB_ENV
+          echo "PKG_BUILD_STRING=integ_${GITHUB_SHA::7}" >> $GITHUB_ENV
 
       - name: Install build tools
         shell: bash -l {0}
