--- a/.github/workflows/bootstrap-levinelab-sync.yml
+++ b/.github/workflows/bootstrap-levinelab-sync.yml
@@ -48,8 +48,8 @@ jobs:
 
       - name: Configure cosmetic author
         run: |
-          git config user.name "LevineLab Sync Bot"
-          git config user.email "levinelab-sync@users.noreply.github.com"
+          git config user.name "Ryan Reynolds"
+          git config user.email "ryanreyn@users.noreply.github.com"
 
       - name: Push bootstrap branch to lab repo
         env:
