--- a/.github/workflows/bootstrap-levinelab-sync.yml
+++ b/.github/workflows/bootstrap-levinelab-sync.yml
@@ -1,10 +1,9 @@
-name: Bootstrap LevineLab mirror PR (latest or chosen tag)
-
+name: Mirror to LevineLab
 on:
   workflow_dispatch:
     inputs:
       tag:
-        description: "Specific tag to sync (optional). If empty, latest GitHub release is used."
+        description: "Tag to sync (empty = latest vX.Y.Z tag)"
         required: false
         default: ""
 
@@ -15,84 +14,54 @@ env:
   LAB_REPO: LevineLab/CarveWe
 
 jobs:
-  bootstrap:
+  mirror:
     runs-on: ubuntu-latest
     steps:
-      - name: Pick tag to sync
-        id: pick
-        env:
-          INPUT_TAG: ${{ inputs.tag }}
-        run: |
-          set -euo pipefail
-          if [[ -n "${INPUT_TAG}" ]]; then
-            TAG="${INPUT_TAG}"
-          else
-            TAG=$(curl -s https://api.github.com/repos/ryanreyn/CarveWe/releases/latest | jq -r .tag_name)
-            if [[ "$TAG" == "null" || -z "$TAG" ]]; then
-              echo "No releases found. Provide a tag input (e.g., v1.2.3)."
-              exit 1
-            fi
-          fi
-          # Strict SemVer vX.Y.Z (adjust if you allow pre-releases)
-          if [[ ! "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "Chosen tag '$TAG' is not SemVer (vX.Y.Z)."
-            exit 1
-          fi
-          echo "tag=$TAG" >> $GITHUB_OUTPUT
-
-      - name: Check out the chosen tag
+      - name: Checkout with all tags
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ steps.pick.outputs.tag }}
+          persist-credentials: false
 
-      - name: Configure cosmetic author
+      - name: Determine tag
+        id: tag
         run: |
-          git config user.name "Ryan Reynolds"
-          git config user.email "ryanreyn@users.noreply.github.com"
-
-      - name: Verify PAT is present
-        run: |
-          if [ -z "${{ secrets.LAB_PUSH_TOKEN }}" ]; then
-            echo "LAB_PUSH_TOKEN is not set or unavailable to this workflow run."
-            exit 1
+          if [[ -n "${{ inputs.tag }}" ]]; then
+            TAG="${{ inputs.tag }}"
+          else
+            TAG=$(git tag -l 'v[0-9]*.[0-9]*.[0-9]*' --sort=-v:refname | head -n1)
+            [[ -z "$TAG" ]] && echo "No SemVer tags found" && exit 1
           fi
+          [[ ! "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo "Invalid SemVer: $TAG" && exit 1
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
+          echo "Using tag: $TAG"
 
-      - name: Push bootstrap branch to lab repo
-        env:
-          TAG: ${{ steps.pick.outputs.tag }}
-          LAB_PUSH_TOKEN: ${{ secrets.LAB_PUSH_TOKEN }}
+      - name: Configure git with PAT
         run: |
-          set -euo pipefail
-          BRANCH="bootstrap-${TAG}"
-          git remote add lab https://x-access-token:${LAB_PUSH_TOKEN}@github.com/${{ env.LAB_REPO }}.git
+          git config user.name "LevineLab Sync Bot"
+          git config user.email "levinelab-sync@users.noreply.github.com"
+          git config --global url."https://x-access-token:${{ secrets.LAB_PUSH_TOKEN }}@github.com/".insteadOf "https://github.com/"
+
+      - name: Push branch and create PR
+        env:
+          TAG: ${{ steps.tag.outputs.tag }}
+          GH_TOKEN: ${{ secrets.LAB_PUSH_TOKEN }}
+        run: |
+          BRANCH="sync-${TAG}"
+          
+          # Push the branch
           git checkout -B "$BRANCH" "$TAG"
-          git push lab "$BRANCH:$BRANCH" --force
-
-      - name: Open PR on lab repo (idempotent)
-        env:
-          TAG: ${{ steps.pick.outputs.tag }}
-          LAB_PUSH_TOKEN: ${{ secrets.LAB_PUSH_TOKEN }}
-          LAB_REPO: ${{ env.LAB_REPO }}
-        run: |
-          set -euo pipefail
-          TITLE="Bootstrap sync upstream ${TAG}"
-          BODY="Initial mirror PR for upstream release ${TAG}."
-          HEAD="bootstrap-${TAG}"
-          BASE="main"
-
-          existing=$(curl -s -H "Authorization: token ${LAB_PUSH_TOKEN}" \
-            -H "Accept: application/vnd.github+json" \
-            "https://api.github.com/repos/${LAB_REPO}/pulls?state=open&head=${LAB_REPO%%/*}:${HEAD}")
-          if echo "$existing" | jq -e 'length > 0' >/dev/null; then
-            echo "PR already exists for ${HEAD} → ${BASE}. Skipping creation."
+          git remote add lab https://github.com/${{ env.LAB_REPO }}.git
+          git push lab "$BRANCH" --force
+          
+          # Create PR if it doesn't exist
+          gh pr list --repo ${{ env.LAB_REPO }} --head "$BRANCH" --state open --json number -q '.[0].number' | grep -q . && {
+            echo "PR already exists for $BRANCH"
             exit 0
-          fi
-
-          payload=$(jq -n --arg title "$TITLE" --arg head "$HEAD" --arg base "$BASE" --arg body "$BODY" \
-                     '{title:$title, head:$head, base:$base, body:$body}')
-
-          curl -s -H "Authorization: token ${LAB_PUSH_TOKEN}" \
-               -H "Accept: application/vnd.github+json" \
-               -X POST "https://api.github.com/repos/${LAB_REPO}/pulls" \
-               -d "$payload" >/dev/null
+          }
+          
+          gh pr create --repo ${{ env.LAB_REPO }} \
+            --head "$BRANCH" \
+            --base main \
+            --title "Sync upstream $TAG" \
+            --body "Mirror of upstream tag $TAG from ryanreyn/CarveWe"
