--- a/.github/workflows/release-conda.yml
+++ b/.github/workflows/release-conda.yml
@@ -11,9 +11,11 @@ jobs:
 
   build-upload:
     needs: integration
+    timeout-minutes: 120
     strategy:
       matrix:
         os: [ubuntu-latest, macos-13]   # macos-13 = Intel runner (osx-64)
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
