--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -4,7 +4,7 @@ on: [workflow_call, workflow_dispatch]
 
 jobs:
   integ:
-    runs-on: ubuntu-latest\
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
