--- a/.github/workflows/release-conda.yml
+++ b/.github/workflows/release-conda.yml
@@ -14,7 +14,7 @@ jobs:
     timeout-minutes: 120
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-13]   # macos-13 = Intel runner (osx-64)
+        os: [ubuntu-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
