--- a/conda_recipe/meta.yaml
+++ b/conda_recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "carvewe" %}
-{% set version = environ.get('CONDA_PKG_VERSION', '0.5.0') %}
-{% set buildstr = environ.get('PKG_BUILD_STRING', 'local') %}
+{% set version = environ.get('CONDA_PKG_VERSION', '0.0.0') %}
+{% set build_string = environ.get('PKG_BUILD_STRING', 'dev') %}
 
 package:
   name: {{ name|lower }}
@@ -12,7 +12,7 @@ source:
 
 build:
   number: 0
-  string: {{ environ.get('PKG_BUILD_STRING', 'local') }}
+  string: {{ build_string }}
   skip: True  # [target_platform == "osx-arm64"]
 
 requirements:
