Reducing linux build workflow to dispatch only (manual artifact creation) and ensuring certain user defined directories are converted to absolute paths.

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,7 +1,7 @@
 # .github/workflows/build-linux.yml
 name: Build Linux
 
-on: [push, pull_request, workflow_dispatch]
+on: [workflow_dispatch]
 
 jobs:
   linux64:
